[DOC] Optimization roadmap + AGENTS.md knowledge merge
- docs/optimization-roadmap.md: merge 3 sources (audit + WSL session + Windows
  session) into P0/P1/P2 priority list with fix suggestions and sources
- AGENTS.md: merge depth knowledge from WSL .opencode/AGENTS.md (SB 4.0.6
  breaking changes, monorepo boundary, K8s/GitOps, dual CI, test quirks,
  security tooling); mark WSL as read-only backup